--- a/CV/index.html
+++ b/CV/index.html
@@ -4,7 +4,7 @@
 
     <head>
         <title> CV Estephania Calvo</title>
-        <meta charset="urf-8">
+        <meta charset="utf-8">
         <meta name="description" content="Estudiente de último semestre de ingeniería industrial 
         con experiencia en gestión de calidad y protocolos de validación">
     </head>
