--- a/Boletines/index.html
+++ b/Boletines/index.html
@@ -1,11 +1,182 @@
 <!DOCTYPE html>
-<html lang="es">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boletines</title>
+    <meta name="viewport" content="width=device-width" initial-scale="1.0">
+    <title>Los mejores canales de divulgación en español de YouTube</title>
+    <link href="https://necolas.github.io/normalize.css/8.0.1/normalize.css" rel="stylesheet">
+    <link href="font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="./assets/css/main.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@400;600&family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+
+    <div class="container">
+
+        <div class="content">
+
+            <header>
+                <h1 class="title">Los mejores canales de divulgación en español de YouTube</h1>
+            </header>
+
+            <table class="table">
+                <thead>
+                    <th>Canal</th>
+                    <th>Categoria</th>
+                    <th>Puntuación</th>
+                    <th>Año de creación</th>
+                    <th>Suscriptores</th>
+                </thead>
+
+                <tbody>
+
+                    <tr>
+                        <td>Alvinsch</td>
+                        <td>Música</td>
+                        <td>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star-half-o" aria-hidden="true"></i>
+                        </td>
+                        <td>2017</td>
+                        <td>+ 1M</td>
+                    </tr>
+
+                    <tr>
+                        <td>Antroporama</td>
+                        <td>Neurociencia</td>
+                        <td>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                        </td>
+                        <td>2017</td>
+                        <td>+ 509K</td>
+                    </tr>
+
+                    <tr>
+                        <td>Date un Vlog</td>
+                        <td>Ciencia</td>
+                        <td>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star-half-o" aria-hidden="true"></i>
+                        </td>
+                        <td>2016</td>
+                        <td>+ 1,4M</td>
+                    </tr>
+
+                    <tr>
+                        <td>Dot CSV</td>
+                        <td>Inteligencia artificial</td>
+                        <td>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                        </td>
+                        <td>2017</td>
+                        <td>+ 277K</td>
+                    </tr>
+
+                    <tr>
+                        <td>Jaime Altozano</td>
+                        <td>Música</td>
+                        <td>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                        </td>
+                        <td>2016</td>
+                        <td>+ 2.3M</td>
+                    </tr>
+
+                    <tr>
+                        <td>Marco Creativo</td>
+                        <td>Diseño gráfico</td>
+                        <td>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                        </td>
+                        <td>2008</td>
+                        <td>+ 345k</td>
+                    </tr>
+
+                    <tr>
+                        <td>MuguPiensa</td>
+                        <td>Psicología</td>
+                        <td>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star-half-o" aria-hidden="true"></i>
+                            <i class="fa fa-star-o" aria-hidden="true"></i>
+                        </td>
+                        <td>2016</td>
+                        <td>+ 18k</td>
+                    </tr>
+
+                    <tr>
+                        <td>Pero eso es otra historia</td>
+                        <td>Historia</td>
+                        <td>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                        </td>
+                        <td>2015</td>
+                        <td>+ 700K</td>
+                    </tr>
+
+                    <tr>
+                        <td>Platzi</td>
+                        <td>Tecnología - Educación - General</td>
+                        <td>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                        </td>
+                        <td>2010</td>
+                        <td>+ 900K</td>
+                    </tr>
+
+                    <tr>
+                        <td>VisualPolitk</td>
+                        <td>Enomía - Política</td>
+                        <td>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                            <i class="fa fa-star" aria-hidden="true"></i>
+                        </td>
+                        <td>2016</td>
+                        <td>+ 1,7M</td>
+                    </tr>
+
+                </tbody>
+            </table>
+
+        </div>
+    </div>
+ 
 </body>
+
 </html>
